<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/acc"
        android:title="@string/acc" />

    <item
        android:id="@+id/map"
        android:title="@string/map" />

    <item
        android:id="@+id/fav"
        android:title="@string/fav" />
    <item
        android:id="@+id/lang"
        android:title="@string/lang" />
    <item
        android:id="@+id/quit"
        android:title="@string/quit" />




</menu>
